--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   path_provider: ^2.1.1
   http: ^1.1.0
   dio: ^5.3.3
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
